--- a/src/Components/RushEventInfo.module.css
+++ b/src/Components/RushEventInfo.module.css
@@ -8,12 +8,13 @@
     transition-duration: 500ms;
     padding: 1rem; /* Added padding for better spacing on mobile */
     margin: 1rem; /* Added margin for better spacing on smaller screens */
-}
-
-.eventCard:hover {
     transform: scale(1.05);
     background-color: #12121283;
     transition-duration: 500ms;
+}
+
+.eventCard:hover {
+    background-color: #00000083;
 }
 
 .eventTitle {
