--- a/src/Pages/ActiveBrother.css
+++ b/src/Pages/ActiveBrother.css
@@ -7,7 +7,7 @@ body {
 }
 
 .brother-container {
-  width: 95%;
+  width: auto;
   max-width: 1400px;
   margin: 5rem auto;
   padding: 2rem;
@@ -97,6 +97,13 @@ body {
   color: #3a5f8e;
   position: absolute;
   left: 0;
+}
+
+.brother-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
 
