--- a/src/Pages/CareerTable.css
+++ b/src/Pages/CareerTable.css
@@ -153,7 +153,7 @@
     display: flex;
     flex-direction: column;
     padding: 0.5rem;
-    text-align: right;
+    text-align: left;
     border-bottom: 1px solid #444;
   }
 
