--- a/src/Pages/MeetUs.css
+++ b/src/Pages/MeetUs.css
@@ -2,7 +2,6 @@
   padding-top: 80px;
   background-size: cover;
   background-position: center;
-  min-height: 100vh;
   background-color: #121212;
   color: aliceblue;
   display: flex;
@@ -12,12 +11,13 @@
 
 .contentWrapper {
   flex: 1;
-  overflow-y: auto;
+  overflow: hidden;
   padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  position: fixed;
 }
 
 .view-buttons {
@@ -29,9 +29,9 @@
   user-select: none;
   font-size: 2rem;
   margin: 0;
-  letter-spacing: 5px;
+  letter-spacing: 0.3rem;
   font-weight: bold;
-  padding: 20px;
+  padding: 1rem;
   color: transparent;
   background: linear-gradient(45deg, #97ffa3, #ff819e, #7bcaff, #ffc0c0);
   background-size: 300%;
