--- a/src/Pages/ActiveBrotherList.module.css
+++ b/src/Pages/ActiveBrotherList.module.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 3px 0px rgba(255, 255, 255, 0.1);
 }
 
 .brotherGrid {
