--- a/src/Pages/ExecutiveBoardList.module.css
+++ b/src/Pages/ExecutiveBoardList.module.css
@@ -1,18 +1,16 @@
 .container {
     width: 100%;
-    max-width: 65%;
+    max-width: 67%;
     margin: 0 auto;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 3px 0px rgba(255, 255, 255, 0.1);
   }
   
   .brotherGrid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 3rem;
-    overflow-y: auto;
-    max-height: calc(100vh - 300px); /* Adjusted for more space */
     padding: 20px;
     margin-bottom: 30px; /* Space at the bottom */
   }
@@ -84,10 +82,10 @@
   }
   
   .brotherName {
-    font-size: 1.1rem;
+    font-size: 1rem;
     color: #e0e0e0;
     margin: 0;
-    font-weight: 550;
+    font-weight: 500;
   }
 
   .brotherLink {
