--- a/src/Components/NavLinks.css
+++ b/src/Components/NavLinks.css
@@ -38,7 +38,7 @@
   position: absolute;
   width: 100%;
   height: 3px;
-  background-color: #302ad6;
+  background-color: #0077b5;
   left: 0;
   bottom: -6px;
   transform: scaleX(0);
