--- a/src/Pages/MeetUs.css
+++ b/src/Pages/MeetUs.css
@@ -37,7 +37,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 1200px;
+  max-width: 100rem;
   margin: 0 auto;
   width: 100%;
   position: relative;
