--- a/src/Pages/CareerTable.css
+++ b/src/Pages/CareerTable.css
@@ -34,6 +34,9 @@ body {
   background-color: var(--bg-card);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: box-shadow var(--transition-speed) ease;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 .years:hover {
