--- a/src/Pages/Careers.css
+++ b/src/Pages/Careers.css
@@ -38,8 +38,8 @@
 }
 
 .careersmainTitle {
-  font-size: 65px;
-  font-family: 'Greek Font', sans-serif;
+  font-size: 3rem;
+  font-family: 'Helvetica', sans-serif;
   color: rgb(255, 255, 255);
   text-align: center;
   margin: 0;
@@ -51,24 +51,6 @@
   z-index: 2;
 }
 
-.hero-c-title {
-  font-family: 'Greek Font', sans-serif;
-  user-select: none;
-  font-size: 3.5rem;
-  margin: 0;
-  letter-spacing: 5px;
-  font-weight: bold;
-  padding: 20px;
-  color: transparent;
-  background: linear-gradient(45deg, #97ffa3, #ff819e, #7bcaff, #ffc0c0);
-  background-size: 300%;
-  background-clip: text;
-  -webkit-background-clip: text;
-  text-shadow: 
-    2px 2px 0px black,
-    4px 4px 0px rgb(211, 211, 252);
-  animation: gradient-animation 15s infinite;
-}
 
 .careers-subtitle1 {
   font-family: 'Greek Font', sans-serif;
@@ -107,15 +89,3 @@
 .td {
   font-size: 1.5rem;
 }
-
-.careersmainTitle{
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 26px;
-  margin-bottom: 0px;
-}
-
-.careersmainTitleSection{
-  padding: 50px;
-  margin-bottom: -42px;
-}
-
