--- a/src/Pages/ActiveBrotherList.module.css
+++ b/src/Pages/ActiveBrotherList.module.css
@@ -57,6 +57,7 @@ body {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   align-items: center;
 }
 
