--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,7 +1,9 @@
 :root {
   --primary-color: #0077b5;
   --accent-color: #00a0dc;
-  --bg-dark: #121212;
+  --bg-second: #121212;
+  --bg-dark: #0e0e0e;
+
   --bg-card: #1e1e1e;
   --text-light: #ffffff;
   --text-muted: #b0b0b0;
@@ -140,7 +142,7 @@ html, body {
 /*Info section styles */
 .info-section {
   padding: 80px 20px;
-  background-color: var(--bg-dark);
+  background-color: var(--bg-second);
   text-align: center;
   min-height: 100vh;
   width: 100%;
